fixed spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,6 +231,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Gallery */
 .gallery {
 	margin-top: 30px;
+	float: left;
 }
 
 .gallery img:hover {
